# the-bead-reserve

./: .gitattributes  .gitignore  LICENSE  README.md
camera/: .env.example  .gitignore  README.md  device.env.example  launch.sh  provision-cro.sh  provision.sh  pyproject.toml  smoke.sh
camera/scripts/: ingest-sink.py  profile-snapshot.sh  smoke.sh
camera/src/: capture.py  cli.py  config.py  cro.py  cro_assets.py  cro_calls.py  cro_flavor.py  fsio.py  llama_server.py  lock.py  process.py  push.py  queue.py  sign.py  sink.py  status.py
camera/systemd/: beadz-capture.service  beadz-capture.timer  beadz-push.service  beadz-push.timer  beadz-sink.service
camera/tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_cro.py  test_cro_assets.py  test_cro_calls.py  test_cro_flavor.py  test_fsio.py  test_integration_sink.py  test_launch_sh.py  test_llama_server.py  test_lock.py  test_process.py  test_push.py  test_queue.py  test_sign.py  test_sink.py  test_status.py
cro-bench/: .gitignore  README.md  mood_rotation.py  moods.json  pyproject.toml
cro-bench/src/: __init__.py  calls.py  cli.py  fetch.py  flavor.py  results.py  server.py  variant.py
cro-bench/tests/: test_calls.py  test_cli.py  test_fetch.py  test_flavor.py  test_moods.py  test_results.py  test_server.py  test_variant.py
cro-bench/variants/v1/: flavor.txt  slots.json  template.txt
cro-bench/variants/v1/slots/: jar.gbnf  level.gbnf
cro-bench/variants/v5-flustered/: flavor.txt  flavor_persona.txt  persona.txt  slots.json
cro-bench/variants/v5-flustered/slots/: lid.gbnf
(+71 files in other folders)
